--- a/app/src/main/res/layout/type_home_fragment.xml
+++ b/app/src/main/res/layout/type_home_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#f5f6f7"
     tools:context=".homeScreen.MovieListFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -11,7 +12,19 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
+
     </android.support.v7.widget.RecyclerView>
+    <ProgressBar
+        android:id="@+id/progress_type_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/recyclerview"
+        android:layout_centerHorizontal="true"
+        android:visibility="visible" />
+
+
 
 </RelativeLayout>
