--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -70,6 +70,7 @@
         android:backgroundTint="@color/white">
 
         <TextView
+            android:id="@+id/description_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="22dp"
@@ -222,15 +223,22 @@
         android:layout_marginLeft="16dp"
 
         />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_movie_detail"
-        android:layout_width="match_parent"
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/similar_options"
-        >
+        android:layout_below="@id/similar_options">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview_movie_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            >
+
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v7.widget.CardView>
+
 
 
 </RelativeLayout>
